--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- TELA DE LOGIN (só aparece se não estiver logado) -->
         <div id="login-container" class="card">
-            <img src="https://i.imgur.com/ODtO43c.png" alt="Logo FacilChat" class="logo">
+            <img src="./assets/logo.png" alt="Logo FacilChat" class="logo">
             <h1>Crie chatbots inteligentes</h1>
             <p>Automatize seu atendimento no WhatsApp de forma simples e intuitiva.</p>
             <button id="login-google" class="btn-login">
@@ -28,7 +28,7 @@
         <!-- PAINEL PRINCIPAL (só aparece depois do login) -->
         <div id="app-container" style="display: none;">
             <header>
-                <img src="https://i.imgur.com/ODtO43c.png" alt="Logo FacilChat" class="logo-header">
+                <img src="./assets/minichat.png" alt="Logo FacilChat" class="logo-header">
                 <div class="user-info">
                     <span id="user-email"></span>
                     <button id="logout" class="btn-secondary">Sair</button>
