melhoria bug do edit

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                             <option value="Agendamentos">Agendamentos</option>
                             <option value="Personalizado">Personalizado</option>
                         </select>
+                        <!-- ADICIONE A LINHA ABAIXO -->
+                        <textarea id="bot-function-custom" placeholder="Caso tenha escolhido 'Personalizado', descreva a função aqui." style="display:none; margin-top: -1rem;"></textarea>
 
                         <label for="bot-tone">Defina um tom para o atendimento</label>
                         <select id="bot-tone" required>
@@ -110,6 +112,8 @@
                     <option value="Agendamentos">Agendamentos</option>
                     <option value="Personalizado">Personalizado</option>
                 </select>
+                <!-- ADICIONE A LINHA ABAIXO -->
+                <textarea id="edit-bot-function-custom" placeholder="Caso tenha escolhido 'Personalizado', descreva a função aqui." style="display:none; margin-top: -1rem;"></textarea>
 
                 <label for="edit-bot-tone">Tom de Atendimento</label>
                 <select id="edit-bot-tone" required>
