--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
         <div class="loading-spinner"></div>
     </div>
 
-    <!-- CONTAINER PRINCIPAL -->
-    <div class="app-container">
-        
         <!-- VIEW 1: LOGIN -->
-        <div id="login-view" class="view">
+        <div id="login-view" class="view" style="display: none;">
             <div class="login-container">
                 <img src="./assets/logo.png" alt="FacilChat" class="login-logo">
             <h1>Crie chatbots inteligentes</h1>
@@ -71,7 +68,10 @@
                 Entrar com Google
             </button>
         </div>
-        </div>
+        </div>    
+
+    <!-- CONTAINER PRINCIPAL -->
+    <div class="app-container">
 
         <!-- VIEW 2: DASHBOARD -->
         <div id="dashboard-view" class="view">
