--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             </div>
                             <form class="step-form">
                                 <div class="form-group">
-                                    <label for="bot-name">Nome do Aassistente</label>
+                                    <label for="bot-name">Nome do Assistente</label>
                                     <input type="text" id="bot-name" class="input-medium" placeholder="Exemplo: 'Atendente da Pizzaria', 'Recepcionista', 'Luna' etc.." required maxlength="30">
                                 </div>
                                 <div class="form-group">
